--- a/package.json
+++ b/package.json
@@ -1,11 +1,43 @@
 {
-  "name": "battleships",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "battleships",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack serve --port 3000"
+    },
+    "author": "",
+    "license": "ISC",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/BCostin/battleships.git"
+    },
+    "bugs": {
+        "url": "https://github.com/BCostin/battleships/issues"
+    },
+    "homepage": "https://github.com/BCostin/battleships#readme",
+    "description": "",
+    "devDependencies": {
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.3",
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.6.0",
+        "sass": "^1.51.0",
+        "sass-loader": "^12.6.0",
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.6.4",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.9.0",
+        "webpack-manifest-plugin": "^5.0.0"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.8.1",
+        "dotenv": "^16.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^8.0.1",
+        "react-router-dom": "^6.3.0"
+    }
 }
